--- a/style.css
+++ b/style.css
@@ -213,6 +213,10 @@ img {
   color: #fff;
 }
 
+#services,#skills,#contact{
+  padding-bottom: 80px;
+}
+
 .service-content {
   margin-bottom: 30px;
   text-align: center;
@@ -245,9 +249,74 @@ img {
   margin-top: 6.5rem;
 }
 
+#skills{
+  background-color: #09102D;
+}
 
+#skills h3{
+  font-size: 32px;
+  text-transform: uppercase;
+  color: #ffaa02;
+  text-align: center;
+  margin-bottom: 35px;
+}
 
+.skill-content{
+  display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+}
 
+#contact .line{
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+#contact h1{
+  font-size: 32px;
+  text-transform: uppercase;
+  color: #ffaa02;
+  text-align: center;
+  margin-bottom: 15px;
+}
+.contact-form{
+  text-align: center;
+}
+
+.contact-form input{
+  background-color: #000;
+  padding: 10px 25px;
+  border-radius: 15px;
+  border: none; 
+  border: 2px solid #ffaa02;
+}
+.contact-form #email{
+  width: 58%;
+}
+.contact-form #fname{
+  width:25%;
+  margin-right: 8px;
+}
+.contact-form #lname{
+  width:25%;
+}
+.contact-form #textrea{
+   background-color: #000;
+  padding: 10px 25px;
+  border-radius: 15px;
+  border: none; 
+  border: 2px solid #ffaa02;
+  width: 58%;
+}
+
+.contact-form #button{
+  width: 65%;
+  background-color: #ffaa02;
+  color:#fff;
+  font-size: 18px;
+  font-weight:600;
+  text-transform: uppercase;
+}
 
 
 
